cmake_minimum_required(VERSION 3.15)
project(OOP-in-CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(wall_8 Wall/wall-8/wall_8.cpp)
add_executable(wall_7 Wall/wall-7/wall_7.cpp)
add_executable(wall_6 Wall/wall-6/wall_6.cpp)
add_executable(rps Rock-Paper-Scissors/main.cpp)
add_executable(wall_9 Wall/wall-9/wall_9.cpp)
add_executable(vector Wall/vector/vector.cpp)
add_executable(temp Wall/temp/temp.cpp)
add_executable(kth_small_el kth_smallest_el/kth_small_el.cpp)
add_executable(m_d_arr M-D-Array/m_d_arr.cpp)
add_executable(init_private_member Questions/init_private_member/init_private_member.cpp)
add_executable(count_instances Count-Instances/count_instances.cpp)
add_executable(my_log My-Log/my_log.cpp)
add_executable(check_dir check-dir/check_dir.cpp)